@@ -34,6 +34,8 @@ typedef struct e_arg
 
 #define F_PS_STOP_TRAVERSE              ((uint8_t)1 << 1)
 
+#define MAX_BWHOLD_BYTES_DL             524288 * 2
+
 int
 update_records(char *dirname, int depth);
 int
